fix bug on mobile with bottom padding

--- a/styles/components/ProjectComponent.module.css
+++ b/styles/components/ProjectComponent.module.css
@@ -27,7 +27,7 @@
   max-width: 95%;
   margin: 5em 2em 0;
   width: 500px;
-  min-height: 400px;
+  min-height: 350px;
   padding: 20px;
   background-color: white;
   box-shadow: 1px -1px 0 1px var(--black), 2px -2px 0 1px var(--black), 3px -3px 0 1px var(--black), 4px -4px 0 1px var(--black), 5px -5px 0 1px var(--black), 6px -6px 0 1px var(--black);
